--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.15",
     "@heroicons/vue": "^2.0.18",
+    "chart.js": "^4.4.0",
     "moment": "^2.29.4",
     "path-browserify": "^1.0.1",
     "vue": "^3.3.4",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "4"
   },
   "devDependencies": {
