--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.15",
     "@heroicons/vue": "^2.0.18",
+    "axios": "^1.5.0",
     "chart.js": "^4.4.0",
     "moment": "^2.29.4",
     "path-browserify": "^1.0.1",
