--- a/package.json
+++ b/package.json
@@ -3,16 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --host"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.15",
     "@heroicons/vue": "^2.0.18",
-    "axios": "^1.5.0",
-    "chart.js": "^4.4.0",
-    "moment": "^2.29.4",
     "path-browserify": "^1.0.1",
     "vue": "^3.3.4",
     "vue-chartjs": "^5.2.0",
@@ -21,6 +18,9 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.4.0",
     "@vitejs/plugin-vue": "^4.2.3",
+    "axios": "^1.5.0",
+    "chart.js": "^4.4.0",
+    "moment": "^2.29.4",
     "autoprefixer": "^10.4.5",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
